--- a/exercicio.html
+++ b/exercicio.html
@@ -15,7 +15,7 @@
         <input id="senha" type="password" />
         <br />
         <label for="email">E-mail: </label>
-        <input id="email" type="text" />
+        <input id="email" type="email" />
         <br />
         <button type="submit">
             Cadastrar
